* Bug fix: fixed/updated tests   [ghicaale refs #30813]
--Ths line, and those below, will be ignored--

caale refs #30813]M    docs/HISTORY.txt
M    eea/soer/sense.txt

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.6.dev0 - (unreleased)
 -----------------------
+* Bug fix: fixed/updated tests
+  [ghicaale refs #30813]
 
 6.5 - (2015-11-03)
 ------------------
