--- a/trunk/eea.soer/trunk/docs/HISTORY.txt
+++ b/trunk/eea.soer/trunk/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.7.dev0 - (unreleased)
+-----------------------
+
 6.6 - (2015-12-08)
 ------------------
 * Bug fix: fixed/updated tests
