--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.7.dev0 - (unreleased)
 -----------------------
+* Change: updated package information
+[eduard-fironda]
 
 6.6 - (2015-12-08)
 ------------------
