--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.0.dev0 - (unreleased)
+-----------------------
+
 6.9 - (2017-05-22)
 ------------------
 * Change: fixed PyLint warnings and errors
