Update to work with eea.rdfmarshaller 10.1 and rdflib 4.2.2

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 7.0.dev0 - (unreleased)
 -----------------------
+* Change: Update to work with eea.rdfmarshaller 10.1 and rdflib 4.2.2
+  [avoinea refs #88194]
 
 6.9 - (2017-05-22)
 ------------------
