--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,7 +2,10 @@ Changelog
 =========
 
 7.4-dev0 - (unreleased)
----------------------
+-----------------------
+* Change: commonality_report_view photoAlbumEntry now uses a background image
+  for better image scaling
+  [ichim-david refs #106884]
 
 7.3 - (2019-01-28)
 ---------------------
